# Lab

./: .editorconfig  CMakeLists.txt  Header.h  README.md  doxyfile  initialization.cpp  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters
Math_func/: CMakeLists.txt  Math_func.vcxproj  Math_func.vcxproj.filters  header_func.h  matrix1.cpp
TEST/: CMakeLists.txt  TEST.vcxproj  test.cpp
doc/html/: _header_8h.html  _header_8h.js  _header_8h_source.html  dir_259f5d460038ae3c6e39af1ee220d0b8.html  dir_259f5d460038ae3c6e39af1ee220d0b8.js  files.html  files_dup.js  globals.html  globals_func.html  header__func_8h.html  header__func_8h.js  header__func_8h_source.html  index.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
doc/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  functions_0.js  searchdata.js
doc/latex/: _header_8h.tex  _header_8h_source.tex  files.tex  header__func_8h.tex  header__func_8h_source.tex  md__r_e_a_d_m_e.tex  refman.tex
